--- a/themes/vanilla-bootstrap-hugo-theme/layouts/partials/script.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/partials/script.html
@@ -1,7 +1,7 @@
-<script src="{{ "js/feather.min.js" | absURL }}"></script>
-<script>
+<!-- <script src="{{ "js/feather.min.js" | absURL }}"></script> -->
+<!-- <script>
   feather.replace()
-</script>
+</script> -->
 
 {{ if eq .Site.Params.includeBootstrapJs true }}
 <script src="{{ "js/jquery-3.3.1.slim.min.js" | absURL }}"></script>
